[tool.poetry]
name = "BlogPost"
version = "0.1.0"
description = ""
authors = ["Ruturajsinh Rathod <vazarutaj@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "config" },
    { include = "database" }
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
alembic = "^1.16.1"
asyncpg = "^0.30.0"
aiohttp = "^3.8.4"
pyjwt = "^2.6.0"
typer = { extras = ["all"], version = "^0.9.0" }
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
sqlalchemy = "^2.0.41"
pytz = "^2025.2"
bcrypt = "^4.3.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cachetools = "^6.0.0"
fastapi-pagination = "^0.13.3"
